Update and rename info2.yaml to info3.yaml

--- a/info3.yaml
+++ b/info3.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: componente-a
-  description: Componente A
+  name: componente-c
+  description: Componente c
   tags:
     - php
 spec:
