--- a/fin-cliente-microservice.yaml
+++ b/fin-cliente-microservice.yaml
@@ -1,5 +1,5 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: API
 metadata:
   name: fin-cliente-microservice
   description: Description of fin-cliente-microservice
